--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
 
   <style>
+    body {
+      font-family: "Lucida Console", Monaco, monospace;
+    }
+
     #image-container {
       display: flex;
-      margin: 10px;
+      margin-top: 10px;
     }
 
     canvas {
@@ -21,7 +25,8 @@
 
 </head>
 <body>
-
+  <h1>Welcome to the Harry Puppy Meme Generator!</h1>
+  <p>Use the image of Harry the Puppy below or upload your own image!</p>
   <div>
     <input type="file" id="file">
   </div>
